# pseudomancer

./: .buildinfo  .gitignore  README.md  environment.yml  genindex.html  index.html  modules.html  objects.inv  pseudomancer.html  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree  modules.doctree  pseudomancer.doctree  readme.doctree
.github/workflows/: docs.yml  pseudomancer_test.yml  python-app.yml
_modules/: index.html
_modules/pseudomancer/: candidates.html  clustering.html  dependencies.html  download.html  features.html  motifdb.html  orfs.html  overlap.html  pipeline.html  search.html
docs/source/: conf.py  index.rst  modules.rst  pseudomancer.rst
pseudomancer/: __init__.py  __main__.py  candidates.py  clustering.py  dependencies.py  download.py  features.py  motifdb.py  orfs.py  overlap.py  pipeline.py  search.py  tblastn.py
tests/: conftest.py  test_features.py  test_main.py  test_mmseqs2_pipeline.py  test_prodoric.py
